testdata/baselines/reference/submodule/conformance/importTag17.errors.txt
/a.js(1,15): error TS2305: Module '"/node_modules/@types/foo/index"' has no exported member 'Import'.
/a.js(12,15): error TS2749: 'Require' refers to a value, but is being used as a type here. Did you mean 'typeof Require'?


==== /node_modules/@types/foo/package.json (0 errors) ====
    {
        "name": "@types/foo",
        "version": "1.0.0",
        "exports": {
            ".": {
                "import": "./index.d.mts",
                "require": "./index.d.cts"
            }
        }
    }
    
==== /node_modules/@types/foo/index.d.mts (0 errors) ====
    export declare const Import: "module";
    
==== /node_modules/@types/foo/index.d.cts (0 errors) ====
    export declare const Require: "script";
    
==== /a.js (2 errors) ====
    /** @import { Import } from 'foo' with { 'resolution-mode': 'import' } */
                  ~~~~~~
!!! error TS2305: Module '"/node_modules/@types/foo/index"' has no exported member 'Import'.
    /** @import { Require } from 'foo' with { 'resolution-mode': 'require' } */
    
    /**
     * @returns { Import }
     */
    export function f1() {
        return 1;
    }
    
    /**
     * @returns { Require }
                  ~~~~~~~
!!! error TS2749: 'Require' refers to a value, but is being used as a type here. Did you mean 'typeof Require'?
     */
    export function f2() {
        return 1;
    }
    